argocd/k8s/virtualService.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: argocd
  namespace: argocd
spec:
  hosts:
  - "argocd.tjhiatt.dev" # Change it to "*" if you dont have a host name yet
  - "argocd.timhiatt.dev" # Change it to "*" if you dont have a host name yet
  gateways:
  - istio-system/ingress-gateway
  http:
  - route:
    - destination:
        host: "argocd.tjhiatt.dev" # Change it to "*" if you dont have a host name yet
        port:
          number: 80
    - destination:
        host: "argocd.timhiatt.dev" # Change it to "*" if you dont have a host name yet
        port:
          number: 80
